--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "lint": "./node_modules/.bin/eslint",
+    "lint": "eslint",
     "check-lint": "lint [0-9]*.js",
     "dev": "npx babel-node",
     "test": "jest",
-    "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
+    "full-test": "eslint [0-9]*.js && jest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -19,5 +19,16 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.3.1"
-  }
+  },
+  "name": "0x00-es6_basic",
+  "description": "What ES6 is New features introduced in ES6 The difference between a constant and a variable Block-scoped variables Arrow functions and function parameters default to them Rest and spread function parameters String templating in ES6 Object creation and their properties in ES6 Iterators and for-of loops",
+  "version": "1.0.0",
+  "main": "0-constants.js",
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "alx-backend-javascript"
+  },
+  "author": "G-RIMA",
+  "license": "ISC"
 }
