--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -4,19 +4,18 @@
   "description": "What ES6 is New features introduced in ES6 The difference between a constant and a variable Block-scoped variables Arrow functions and function parameters default to them Rest and spread function parameters String templating in ES6 Object creation and their properties in ES6 Iterators and for-of loops",
   "main": ".eslintrc.js",
   "dependencies": {
-    "babel-jest": "^29.3.1",
-    "eslint": "^8.30.0",
-    "jest": "^29.3.1"
+    "eslint": "^8.30.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.20.5",
     "@babel/node": "^7.8.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
-    "jest": "^24.9.0"
+    "jest": "^29.3.1"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
