--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -7,9 +7,9 @@
     "eslint": "^8.30.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.6.0",
     "@babel/node": "^7.8.0",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-env": "^7.6.0",
     "babel-jest": "^29.3.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -22,6 +22,9 @@
     "dev": "npx babel-node",
     "test": "jest",
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
+  },
+  "transform": {
+    "\\.js$": "<rootDir>/node_modules/babel-jest"
   },
   "author": "",
   "license": "ISC"
